k8s/overlays/net-kong/execodex-httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: execodex-fe
  namespace: execodex
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "300m"
    nginx.org/client-max-body-size: "300m"
spec:
  parentRefs:
  - name: kong
    namespace: kong-gateway-namespace
  hostnames:
  - "execodex.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: execodex-fe
      port: 80
